--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     body {
       margin: 0;
       box-sizing: border-box;
-      background: -webkit-linear-gradient(blue, lightblue);
-      height: 100vh;
+      background-image: url("plava.jpg");
+      background-size: cover;
+      width: 100%;
+      min-height: 100vh;
     }
     main {
       display: flex;
@@ -17,8 +19,8 @@
       width: 90%;
       margin: 2% auto;
       padding: 3% 1%;
-      border: 1px solid red;
-      background: -webkit-linear-gradient(snow, mintcream);
+      /*border: 1px solid red;*/
+      background: -webkit-linear-gradient(gray, mintcream);
     }
     h1 {
       text-align: center;
@@ -32,6 +34,16 @@
       margin-bottom: 30px;
       margin-top: 30px;
     }
+    #reset {
+      display: block;
+      margin: auto;
+      padding: 6px;
+      margin-top: 20px;
+      margin-bottom: 10px;
+    }
+    #reset:hover {
+      cursor: pointer;
+    }
     @media (min-width: 800px){
       main {
         display: flex;
@@ -40,9 +52,12 @@
         width: 90%;
         margin: 2% auto;
         padding: 7% 2%;
-        border: 1px solid red;
+
       }
       main div {
+        margin-bottom: 0;
+      }
+      #reset {
         margin-bottom: 0;
       }
       p {
@@ -53,7 +68,7 @@
   </head>
 
   <body>
-<h1>Primitive Calculator</h1>
+<h1>Jednostavan digitron</h1>
     <main>
 
     <div>
@@ -88,10 +103,7 @@
 <p id="prostordeljenje"></p>
 </div>
 </main>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-  aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-  Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<button id="reset">Reset</button>
 
     <script src="main2.js"></script>
   </body>
