--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
         width: 60%;
       }
     }
+      @media (min-width: 2000px){
+        main {
+          width: 80%;
+        }
+      }
     </style>
   </head>
 
