--- a/index.html
+++ b/index.html
@@ -37,12 +37,21 @@
     #reset {
       display: block;
       margin: auto;
-      padding: 6px;
+      padding: 12px;
       margin-top: 20px;
       margin-bottom: 10px;
+      outline-style: none;
+      color: blue;
+      border: 1px solid blue;
+      border-radius: 3px;
+      font-weight: bolder;
+      letter-spacing: 0.02em;
     }
     #reset:hover {
       cursor: pointer;
+      background: blue;
+      color: white;
+      text-transform: uppercase;
     }
     @media (min-width: 800px){
       main {
@@ -64,11 +73,6 @@
         width: 60%;
       }
     }
-      @media (min-width: 1400px){
-        main {
-          width: 76%;
-        }
-      }
     </style>
   </head>
 
